# computer-graphics

./: README.md
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/: Tech Document.txt
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/: CMakeLists.txt
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/Images/3D_model/Bee/bee/: Bee.blend  Bee.mtl
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/Images/3D_model/Center_Desk/Center_Desk/: CLASSIC_COLUMN.mtl
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/Images/3D_model/Chicken/: chicken.c4d  uploads_files_476462_Texture.rar
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/lib/: assimp-vc142-mtd.exp
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/: BillboardObject.cpp  BillboardObject.h  Box.H  Box.cpp  CallBacks.cpp  Camera.H  Camera.cpp  Control.H  Control.cpp  Global.H  Global.cpp  HeightMapWave.H  HeightMapWave.cpp  InteractiveWave.H  InteractiveWave.cpp  Main.cpp  Model.h  Particles.cpp  Particles.h  Scene.H  Scene.cpp  SinWave.H  SinWave.cpp  Skybox.H  Skybox.cpp  Terrain.H  Terrain.cpp
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/FerrisWheel/: Cabin.H  Cabin.cpp  Cabin.frag  Cabin.vert  FerrisWheel.H  FerrisWheel.cpp  Pillar.H  Pillar.cpp  support.frag  support.vert
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/RenderUtilities/: BufferObject.h  Mesh.h  Shader.h  Texture.h  VAO.h  VBO.h
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/RollerCoaster/: Car.H  Car.cpp  Car.frag  Car.vert  Rail.H  Rail.cpp  Rail.frag  Rail.vert  RollerCoaster.H  RollerCoaster.cpp  ctrlPnt.txt  support.frag  support.vert
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/shaders/: billboardObject.frag  billboardObject.vert  billboardObjectSkyboxVersion.vert  box.vert  drop.frag  heightMapWave.frag  heightMapWave.vert  interactiveWave.frag  interactiveWave.vert  interactiveWaveSide.vert  model.frag  model.vert  particles.vert  sinWave.frag  sinWave.vert  skybox.vert  terrain.frag  terrain.vert  update.frag  update.vert
B10832004_程書彥_B10832008_蔡芸軒_P5_ver3/source_code/src/shaders/render/: colorBlock.frag  dot.frag  edge.frag  merge.frag  simple.frag  simple.vert
B10832004_程書彥_P2_ver2/Project2 FLTK/: Tech_Document.docx  User_Manual.txt  desktop.ini
B10832004_程書彥_P2_ver2/Project2 FLTK/Skeleton/Skeleton/: Skeleton.vcxproj  Skeleton.vcxproj.filters
B10832004_程書彥_P3_Ver2/src/: CallBacks.cpp  Track.H  Track.cpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp
B10832004_程書彥_P3_Ver2/src/Utilities/: Pnt3f.H
Computer_graph_P3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RollerCoasters.sln  RollerCoasters.vcxproj  RollerCoasters.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
p1_release_skeleton/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ImageEditing.sln  ImageEditing.vcxproj  ImageEditing.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libtarga.vcxproj  libtarga.vcxproj.filters
黑白棋/WaterSurface-master/src/: TrainView.H  TrainView.cpp  TrainWindow.cpp
(+25 files in other folders)
